--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 		<title>Project 3 - Naraly Serrano </title>
 
-		<link type="text/css" rel="stylesheet" href="styles.css" />
+		<link type="text/css" rel="stylesheet" href="./src/main.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!--[if lt IE 9]>
@@ -17,6 +17,7 @@
 	</head>
 
 	<body>
+
 
 		<script src="lib/index.js"></script>
 	</body>
