Export footer class instal webpack

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8">
 
 		<title>Project 3 - Naraly Serrano </title>
+		<script src="lib/index.js" type="module"></script>
 
 		<link type="text/css" rel="stylesheet" href="./src/main.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,8 +19,7 @@
 
 	<body>
 
-
-		<script src="lib/index.js"></script>
+		<script src="lib/index.js" type="module"></script>
 	</body>
 
 </html>
