--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<body>
 
-		<script src="lib/index.js" type="module"></script>
+		<script src="./lib/index.js" type="module"></script>
 	</body>
 
 </html>
