Add working generator class. begin css for page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 
 		<title>Project 3 - Naraly Serrano </title>
-
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ropa+Sans&display=swap" rel="stylesheet">
 		<!--[if lt IE 9]>
 			<script src="js/html5shiv-printshiv.min.js"></script>
 		<![endif]-->
